# whir-p3

./: .gitignore  Cargo.toml  PERFORMANCE_IMPROVEMENTS.md  README.md  improved_challenge_queries.rs  profile.json  test_debug.rs  test_debug_svo.rs
.github/workflows/: rust.yml
benches/: challenge_queries.rs  eval_multilinear.rs  evaluate.rs  lagrange.rs  multilinear.rs  ntt.rs  stir_queries.rs  sumcheck.rs  sumcheck_poly.rs  sumcheck_svo.rs  transform_evaluations.rs  transpose_copy.rs  transpose_square_swap.rs  utils.rs  wavelet.rs  whir.rs
proptest-regressions/ntt/: utils.txt
src/: constant.rs  dft.rs  dft_multiradix.rs  domain_mapper.rs  errors.rs  fs_utils.rs  lib.rs  main.rs  merkle_tree.rs  parameters.rs  utils.rs
src/crypto/: blake3.rs  field.rs  mod.rs
src/domain/: general.rs  mod.rs  radix2.rs
src/fiat_shamir/: domain_separator.rs  errors.rs  grinding.rs  keccak.rs  mod.rs  pattern.rs  pow.rs  proof_data.rs  prover.rs  sho.rs  tests.rs  traits.rs  transcript.rs  unit.rs  utils.rs  verifier.rs
src/fiat_shamir/codecs/: deserialize.rs  domain_separator.rs  mod.rs  prover_messages.rs  traits.rs  utils.rs  verifier_messages.rs
src/fiat_shamir/duplex_sponge/: interface.rs  mod.rs
src/fiat_shamir/pow/: blake3.rs  mod.rs  traits.rs
src/ntt/: cooley_tukey.rs  matrix.rs  mod.rs  transpose.rs  utils.rs  wavelet.rs
src/parameters/: errors.rs  mod.rs
src/poly/: coeffs.rs  dense.rs  evals.rs  fold.rs  hypercube.rs  lagrange_iterator.rs  mod.rs  multilinear.rs  sequential_lag_poly.rs  univariate.rs  wavelet.rs
src/sumcheck/: eq_state.rs  lagrange.rs  mod.rs  product_polynomial.rs  proof.rs  prover_core.rs  prover_single.rs  small_value_utils.rs  small_values.rs  split_eq_poly.rs  sumcheck_core.rs  sumcheck_polynomial.rs  sumcheck_prover.rs  sumcheck_single.rs  sumcheck_single_domainsep.rs  sumcheck_single_io_pattern.rs  sumcheck_single_skip.rs  sumcheck_single_svo.rs  sumcheck_small_value.rs  sumcheck_small_value_eq.rs  svo.rs  svo_prints.md  tests.rs  utils.rs
src/whir/: batch_proof.rs  committer.rs  domainsep.rs  fiat_shamir.rs  fs_utils.rs  grinding.rs  iopattern.rs  mod.rs  mt.rs  parameters.rs  parsed_proof.rs  proof.rs  prover.rs  statement.rs  stir_evaluations.rs  utils.rs  verifier.rs
src/whir/committer/: mod.rs  reader.rs  reader_rf.rs  writer.rs  writer_rf.rs
src/whir/constraints/: evaluator.rs  mod.rs  sel_statement.rs  statement.rs
src/whir/constraints/statement/: domain.rs  eq.rs  initial.rs  mod.rs  select.rs
src/whir/pcs/: mod.rs  proof.rs  prover_data.rs  query.rs  whir.rs  whir_test.rs
src/whir/prover/: commitment_handler.rs  constraint_evaluator.rs  final_round_processor.rs  mod.rs  proof.rs  round.rs  round_processor.rs  stir_processor.rs
src/whir/prover/round_state/: mod.rs  state.rs  tests.rs
src/whir/prover/stir/: config.rs  handler.rs  mod.rs  openings.rs  queries.rs  types.rs
src/whir/prover/stir_proof/: config.rs  handler.rs  mod.rs  openings.rs  types.rs  utils.rs
src/whir/statement/: constraint.rs  evaluator.rs  mod.rs  point.rs  weights.rs
src/whir/verifier/: errors.rs  mod.rs  parsed_proof.rs  parsed_round.rs  sumcheck.rs  utils.rs
