[package]
name = "whir-p3"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "main"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.dead_code = "allow"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
missing_safety_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
cast_sign_loss = "allow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.0", optional = true }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "83e0fa1", optional = true }
itertools = "0.14"
thiserror = "2.0"
rand = "0.9"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
keccak = "0.1"
blake3 = "1.5.4"
num-bigint = "0.4"
clap = { version = "4.4.17", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = ["parallel"]
parallel = ["dep:rayon", "p3-maybe-rayon/parallel"]
rayon = ["dep:rayon"]

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "whir"
harness = false

[[bench]]
name = "ntt"
harness = false
