[package]
name = "whir-p3"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
default-run = "main"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.dead_code = "allow"
rustdoc.all = "warn"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
cast_sign_loss = "allow"
tuple_array_conversions = "allow"

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
rayon = { version = "1.0", optional = true }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e", features = [
] }
p3-interpolation = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }
p3-multilinear-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "72ceb6e" }

hashbrown = "0.16"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
libm = "0.2.15"
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

# Bin-only deps pulling std
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-forest = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "alloc",
    "env-filter",
], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = { version = "1.0", default-features = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon", "p3-maybe-rayon/parallel", "p3-util/parallel"]
rayon = ["dep:rayon"]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:tracing-forest", "dep:bincode", "rand/default"]

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = ["cli"]

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "whir"
harness = false

[[bench]]
name = "wavelet"
harness = false

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "lagrange"
harness = false

[[bench]]
name = "eval_multilinear"
harness = false

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "sumcheck_svo"
harness = false

[[bench]]
name = "stir_queries"
harness = false
